--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "express",
+  "name": "expressserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "hbs": "^4.0.1"
   }
 }
